refactor: standardize code formatting and remove unnecessary line breaks